image_tag, routes and controllers

--- a/app/views/pages/home/index.html.erb
+++ b/app/views/pages/home/index.html.erb
@@ -1,3 +1,32 @@
-<h1>Pages::Home#index</h1>
-<p>Find me in app/views/pages/home/index.html.erb</p>
- 
+
+<div class="row">
+    <div class="col card" style="width: 18rem;">
+        <%= image_tag "foto1.jpg" , alt:"foto 1",class: "card-img-top"%>
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="card-footer">
+            Card footer
+        </div>
+    </div>
+
+    <div class="col card" style="width: 18rem;">
+        <%= image_tag "foto2.jpg" , alt:"foto 2" ,class: "card-img-top"%>
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="card-footer">
+            Card footer
+        </div>
+    </div>
+
+    <div class="col card" style="width: 18rem;">
+        <%= image_tag "foto3.jpg" , alt:"foto 3" ,class: "card-img-top"%>
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="card-footer">
+            Card footer
+        </div>
+    </div>
+ </div>
